--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -15,6 +15,7 @@
           <option value="" disabled selected>Seleccione un rol</option>
           <option value="medico">Medico</option>
           <option value="paciente">Paciente</option>
+          <option value="enfermera">Enfermera</option>
         </select>
       </div>
 
