--- a/src/app/pages/consultas/consultas.component.html
+++ b/src/app/pages/consultas/consultas.component.html
@@ -97,8 +97,7 @@
               <option *ngFor="let medico of medicos" [value]="medico.id">{{ medico.nombre }}</option>
             </select>
           </div>
-
-        
+        </div>
         <div class="form-row">
           <div class="form-group">
             <label for="create_id_paciente">Paciente *</label>
